<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background"
>
    <!-- android:background="@drawable/gradient_1" -->
    <!--
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    -->
    <!--
    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7564011937299425/5381471075" />
    -->

    <!-- TEST BANNER -->
    <!--<com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            ads:layout_constraintTop_toTopOf="parent" ads:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" ads:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"/>
    -->

    <TextView
            android:text="@string/select_input_string"
            android:textColor="@color/titleTextColor"

            android:layout_width="150dp"
            android:layout_height="19dp"
            android:id="@+id/lbl_SelectType"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"/>
    <TextView
            android:textColor="@color/titleTextColor"

            android:layout_width="180dp"
            android:layout_height="19dp"
            android:id="@+id/lbl_CurrentLocation"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp" android:textAlignment="viewEnd"
            android:textSize="12sp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_SelectType" android:id="@+id/radioGroup"
            android:checkedButton="@id/radioBtn_Velocity" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
                android:text="@string/bb_velocity_string"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioBtn_Velocity"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                tools:layout_editor_absoluteY="47dp"

                android:onClick="updateInputType"/>
        <RadioButton
                android:text="@string/bb_power_joules_string"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioBtn_Power"
                app:layout_constraintTop_toTopOf="@+id/radioBtn_Velocity"
                app:layout_constraintBottom_toBottomOf="@+id/radioBtn_Velocity"
                app:layout_constraintStart_toEndOf="@+id/radioBtn_Velocity" android:layout_marginStart="20dp"
                android:checked="false"

                android:onClick="updateInputType"/>
    </RadioGroup>
    <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"

            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"

            android:inputType="numberDecimal"
            android:maxLength="6"

            android:ems="10"
            android:id="@+id/valueText"
            android:hint="@string/input_value_here_string" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup" tools:targetApi="o"/>
    <TextView
            android:text="@string/mps_inputUnit"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/lbl_inputUnit"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/valueText" app:layout_constraintBottom_toBottomOf="@+id/valueText"
            app:layout_constraintStart_toEndOf="@+id/valueText" android:layout_marginStart="15dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_Convert" android:layout_marginEnd="15dp"/>


    <Button
            android:text="@string/calculate_string"

            android:textColor="@color/backgroundColor"
            android:background="@drawable/button"

            android:layout_width="100dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_Convert"
            android:onClick="updateValues" android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@+id/valueText" app:layout_constraintBottom_toBottomOf="@+id/valueText"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/bb_mass_string"
            android:textColor="@color/titleTextColor"

            android:layout_width="180dp"
            android:layout_height="19dp"
            android:id="@+id/lbl_BBMass"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/valueText"/>
    <TextView
            android:text="@string/power_string"
            android:textColor="@color/titleTextColor"

            android:layout_width="150dp"
            android:layout_height="19dp"
            android:id="@+id/lbl_Target"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_BBMass"
            app:layout_constraintTop_toTopOf="@+id/lbl_BBMass" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" android:textAlignment="viewEnd"/>
    <TextView
            android:text="@string/_0_00j_string"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_output_025g" android:textStyle="bold"
            android:textSize="18sp" android:textAlignment="textEnd"
            app:layout_constraintTop_toTopOf="@+id/lbl_bbMass_025g"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_bbMass_025g" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>
    <TextView
            android:text="@string/_0_12g_string"
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:id="@+id/lbl_bbMass_012g"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="18sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_BBMass"/>
    <TextView
            android:text="@string/_0_00j_string"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_output_012g" android:textStyle="bold"
            android:textSize="18sp" android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_bbMass_012g"
            app:layout_constraintTop_toTopOf="@+id/lbl_bbMass_012g" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>
    <TextView
            android:text="@string/_0_20g_string"
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:id="@+id/lbl_bbMass_020g"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lbl_bbMass_012g"/>
    <TextView
            android:text="@string/_0_00j_string"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_output_020g" android:textStyle="bold"
            android:textSize="18sp" android:textAlignment="textEnd"
            app:layout_constraintTop_toTopOf="@+id/lbl_bbMass_020g"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_bbMass_020g"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
    <TextView
            android:text="@string/_0_25g_string"
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:id="@+id/lbl_bbMass_025g"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lbl_bbMass_020g"/>
    <TextView
            android:text="@string/_0_28g_string"
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:id="@+id/lbl_bbMass_028g"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lbl_bbMass_025g"/>
    <TextView
            android:text="@string/_0_00j_string"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_output_028g" android:textStyle="bold"
            android:textSize="18sp" android:textAlignment="textEnd"
            app:layout_constraintTop_toTopOf="@+id/lbl_bbMass_028g"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_bbMass_028g" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_version"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp" android:textAlignment="viewEnd"
            android:textSize="12sp"/>
    <!--<View
            android:id="@+id/divider"
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_bbMass_028g" android:visibility="visible"/>-->
    <TextView
            android:text="@string/est_effective_range_string"
            android:textColor="@color/titleTextColor"

            android:layout_width="230dp"
            android:layout_height="25dp"
            android:id="@+id/lbl_BBTravelDist"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/lbl_bbMass_028g"
            android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/_0_00m_string"
            android:textColor="@color/titleTextColor"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_output_BBDist" android:textStyle="bold"
            android:textSize="18sp" android:textAlignment="textEnd"
            app:layout_constraintTop_toTopOf="@+id/lbl_BBTravelDist"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_BBTravelDist" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/bb_drop_tolerance_string"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:id="@+id/lbl_BBDropDistance"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/lbl_BBTravelDist"/>
    <TextView
            android:text="@string/_0_00m_string"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_output_dropDistVal"
            android:textSize="18sp" android:textAlignment="textEnd"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lbl_BBDropDistance"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_BBDropDistance"/>

    <TextView
            android:text="@string/adjust_drop_dist_string"
            android:layout_width="200dp"
            android:layout_height="19dp"
            android:id="@+id/lbl_AdjustDropTolerance"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/lbl_BBDropDistance"/>
    <TextView
            android:text="@string/estimate_disclaimer_string"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/lbl_DropDistanceNote"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/seekbar_bbDropTolerance" android:textAlignment="viewStart"
            android:textSize="12sp"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="220dp"
            android:layout_height="20dp"
            android:max="9"
            android:progress="4"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/seekbar_bbDropTolerance"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/lbl_AdjustDropTolerance"/>
    <TextView
            android:text="@string/_0_10m_string"
            android:layout_width="50dp"
            android:layout_height="19dp"
            android:id="@+id/lbl_Slider_0_00m"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp"
            app:layout_constraintTop_toTopOf="@+id/seekbar_bbDropTolerance"
            app:layout_constraintBottom_toBottomOf="@+id/seekbar_bbDropTolerance"/>
    <TextView
            android:text="@string/_1_00m_string"
            android:layout_width="50dp"
            android:layout_height="19dp"
            android:id="@+id/lbl_Slider_1_00m"
            app:layout_constraintTop_toTopOf="@+id/seekbar_bbDropTolerance"
            app:layout_constraintBottom_toBottomOf="@+id/seekbar_bbDropTolerance"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="35dp" android:textAlignment="viewEnd"/>

    <!--<com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/graph_trajectory" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_DropDistanceNote"/>
    -->
</androidx.constraintlayout.widget.ConstraintLayout>